Fix invisible window bug on github

--- a/style.css
+++ b/style.css
@@ -433,4 +433,5 @@ body {
 
 .none {
   display: flex;
+  position: fixed;
 }
